# SoundWave

./: README.md
sound_wave/: Cargo.toml
sound_wave/src/: main.rs
sound_wave/src/controller/: mod.rs  play_backend.rs
sound_wave/src/file_maneger/: fm_backend.rs  mod.rs
sound_wave/src/file_maneger/fm_backend/: mod.rs  tag_reader.rs
sound_wave/src/main_window/: covers.rs  mod.rs  song.rs
sound_wave/src/main_window/controller/: mod.rs  play_backend.rs
sound_wave/src/main_window/file_manager/: mod.rs
sound_wave/src/main_window/file_manager/fm_backend/: mod.rs  tag_reader.rs
sound_wave/src/main_window/playlists/: add_playlist.rs  mod.rs  playlists_backend.rs
sound_wave/src/player/: mod.rs  play_backend.rs
sound_wave/var/: data  files  folders  paths  playlists
sound_wave/var/AlbumCovers/: Auras  Break!  Excuses for Travellers  I Saw the Sun  It's a Wonderful Life  Just for a Day  Life is Strange: Before the Storm - Soundtrack  Main  Morningside  Whirlpool  wtf
