[package]
name = "sound_wave"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.20.1"
egui = "0.20.1"
egui_extras = {version = "^0.20.0", features = ["svg", "image"] }
gstreamer = "0.19.4"
gstreamer-player = "0.19.4"
image = "0.24.5"
rfd = "0.10.0"
single_value_channel = "1.2.2"
